<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/tab1_profile_pic"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:contentDescription="@string/image_description_profile_picture"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars[3]" />

    <TextView
        android:id="@+id/tab1_picture_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginBottom="8dp"
        android:text="Tom Hanks"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="@+id/tab1_profile_pic"
        app:layout_constraintStart_toStartOf="@+id/tab1_profile_pic" />

    <TextView
        android:id="@+id/tab1_user_intro"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/textlines"
        android:text="Hello I am Tom Hanks. I like the way turtles move and I also like burritos. I'm looking for a suitable female partner with similar interests."
        app:layout_constraintEnd_toEndOf="@+id/tab1_profile_pic"
        app:layout_constraintStart_toStartOf="@+id/tab1_profile_pic"
        app:layout_constraintTop_toBottomOf="@+id/tab1_profile_pic" />

    <Button
        android:id="@+id/like_button"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/background_light"
        android:text="@string/like_button_text"
        android:textColor="@color/colorOrangeLike"
        app:layout_constraintStart_toStartOf="@+id/tab1_profile_pic"
        app:layout_constraintTop_toBottomOf="@+id/tab1_user_intro" />

    <Button
        android:id="@+id/nope_button"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:background="@android:color/background_light"
        android:text="@string/nope_button_text"
        android:textColor="@color/colorRedNope"
        app:layout_constraintStart_toEndOf="@+id/like_button"
        app:layout_constraintTop_toTopOf="@+id/like_button" />

</android.support.constraint.ConstraintLayout>
